[gd_scene load_steps=3 format=3 uid="uid://clt4152mf1f65"]

[ext_resource type="Texture2D" uid="uid://rmwllp0iqyf2" path="res://Textures/Raw/Button.png" id="2_vmk41"]
[ext_resource type="Script" path="res://UI/Elements/button.gd" id="3_kslcs"]

[node name="left" type="TextureButton"]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("3_kslcs")

[node name="normal" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("2_vmk41")
region_enabled = true
region_rect = Rect2(224, 352, 32, 32)

[node name="hover" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 16)
texture = ExtResource("2_vmk41")
region_enabled = true
region_rect = Rect2(192, 352, 32, 32)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
